Fixed End Frame Spacing Issues

--- a/dev/hidden-pictures/sass/game-end.scss
+++ b/dev/hidden-pictures/sass/game-end.scss
@@ -92,7 +92,20 @@
         position: absolute;
         left: 0;
         right: 0;
-        bottom: 37px;
+        bottom: 54px;
+            
+        @media screen and (max-width: 600px) {
+            bottom: 39px;
+        }        
+        @media screen and (max-width: 470px) {
+            top: auto;
+            bottom: 15px;
+            margin-top: 10px;
+            
+            .play_again{
+                padding-left: 30px;
+            }
+        }
     }
     // .bottom-cta-container{
     //     font-family: 'CabritoNorBol';
@@ -164,11 +177,6 @@
             height: 100px;
         }
         
-        .end_ctas{
-            top: auto;
-            bottom: 7px;
-            margin-top: 10px;
-        }
     }
   
 }
